# ersatztv-next

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: artifacts.yml  ci.yml  docker.yml  pr.yml
crates/channel/: Cargo.toml
crates/channel/src/: main.rs
crates/ersatztv/: Cargo.toml
crates/ersatztv-channel/: Cargo.toml
crates/ersatztv-channel/src/: channel_session.rs  config.rs  dossier.rs  error.rs  lib.rs  local_proxy.rs  main.rs  playlist_manager.rs  playout_loader.rs  pts_scanner.rs  web_vtt.rs
crates/ersatztv-core/: Cargo.toml  build.rs
crates/ersatztv-core/src/: lib.rs  merge.rs  path_resolve.rs
crates/ersatztv-playout/: Cargo.toml
crates/ersatztv-playout-generator/: Cargo.toml
crates/ersatztv-playout-generator/src/: error.rs  generate.rs  main.rs  sync.rs  xmltv.rs
crates/ersatztv-playout/src/: error.rs  lib.rs  playout.rs  template.rs
crates/ersatztv/src/: channel_model.rs  channel_session.rs  config.rs  error.rs  lib.rs  main.rs  scaffold.rs  xmltv.rs
crates/ersatztv/src/templates/: channel.json
crates/ffpipeline/: Cargo.toml
crates/ffpipeline/src/: audio_codec.rs  audio_decoder.rs  audio_filter.rs  error.rs  ffmpeg_info.rs  filter_chain.rs  frame_rate.rs  frame_size.rs  global_option.rs  hardware_accel.rs  hw_accel.rs  input.rs  lib.rs  macros.rs  output.rs  output_format.rs  output_option.rs  output_settings.rs  overlay_filter.rs  pipeline.rs  probe.rs  video_codec.rs  video_decoder.rs  video_filter.rs  web_vtt.rs
crates/ffpipeline/src/accel/: amf.rs  cuda.rs  mod.rs  opencl.rs  qsv.rs  rkmpp.rs  vaapi.rs  video_toolbox.rs  vulkan.rs
crates/ffpipeline/src/capabilities/: mod.rs  vaapi.rs
crates/ffpipeline/src/capabilities/nvidia/: mod.rs  probe.rs  stub.rs
crates/ffpipeline/src/capabilities/opencl/: cl.rs  mod.rs  stub.rs
crates/ffpipeline/src/capabilities/qsv/: mod.rs  stub.rs  vpl.rs
crates/ffpipeline/src/capabilities/rkmpp/: mod.rs  probe.rs  stub.rs
crates/ffpipeline/src/capabilities/vaapi/: linux.rs  mod.rs  stub.rs
crates/ffpipeline/src/capabilities/videotoolbox/: mod.rs  probe.rs  stub.rs
crates/ffpipeline/src/capabilities/vulkan/: mod.rs  probe.rs  stub.rs
crates/ffpipeline/tests/: cuda.rs  qsv.rs  rkmpp.rs  software.rs  vaapi.rs  videotoolbox.rs
crates/ffpipeline/tests/common/: mod.rs
crates/ffpipeline/tests/fixtures/: 1080p_h264.ts  1080p_h264_10.ts  1080p_hevc_10.ts  1080p_hevc_10_hdr.ts  480p_h264.ts  480p_h264_10.ts  480p_h264_anamorphic.ts  480p_hevc_10.ts  720p_h264.ts  720p_h264_10.ts  720p_hevc_10.ts
crates/libcl-sys/: Cargo.toml
crates/libcl-sys/src/: ffi.rs  lib.rs
crates/libmpp-sys/: Cargo.toml
crates/libmpp-sys/src/: lib.rs  probe.rs
crates/libnvidia-sys/: Cargo.toml
crates/libnvidia-sys/src/: cuda.rs  cuvid.rs  lib.rs  nvenc.rs
crates/libva-sys/: Cargo.toml  build.rs
crates/libva-sys/src/: ffi.rs  lib.rs
crates/libvpl-sys/: Cargo.toml  build.rs
crates/libvpl-sys/src/: ffi.rs  lib.rs
crates/libvt-sys/: Cargo.toml
crates/libvt-sys/src/: lib.rs  probe.rs
crates/libvulkan-sys/: Cargo.toml
crates/libvulkan-sys/src/: ffi.rs  lib.rs
crates/lineup/: Cargo.toml
crates/lineup/src/: main.rs
docker/: Dockerfile
examples/: channel.json  channel.toml  lineup.json  lineup.toml
examples/playout/: playout.json
schema/: channel_config.json  lineup_config.json  playout.json
