[workspace]
members = [
  "crates/ersatztv",
  "crates/ersatztv-channel",
  "crates/ersatztv-core",
  "crates/ersatztv-playout",
  "crates/ersatztv-playout-generator",
  "crates/ffpipeline",
  "crates/libnvidia-sys",
  "crates/libva-sys",
  "crates/libvpl-sys",
]
resolver = "3"

[workspace.dependencies]
axum = "0.8"
clap = { version = "4.6", features = ["derive"] }
dyn-clone = "1.0"
enum_dispatch = "0.3.13"
env_logger = "0.11"
ersatztv-core = { path = "crates/ersatztv-core" }
ersatztv-playout = { path = "crates/ersatztv-playout" }
ffpipeline = { path = "crates/ffpipeline" }
filetime = "0.2"
libloading = "0.9"
libnvidia-sys = { path = "crates/libnvidia-sys" }
libva-sys = { path = "crates/libva-sys" }
libvpl-sys = { path = "crates/libvpl-sys" }
log = "0.4"
rand = { version = "0.10", features = ["thread_rng"] }
schemars = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simple-expand-tilde = "0.5.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "time"] }
tempfile = "3"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing", "serde"] }
tokio = { version = "1.50", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
toml = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
uuid = { version = "1.23", features = ["v4"] }
walkdir = "2.5"
