[package]
name = "ersatztv-channel"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
ersatztv-core = { workspace = true }
ersatztv-playout = { workspace = true }
ffpipeline = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
simple-expand-tilde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
