[package]
name = "ersatztv-channel"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
ersatztv-core = { workspace = true }
ersatztv-playout = { workspace = true }
ffpipeline = { workspace = true }
log = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simple-expand-tilde = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }

[[bin]]
name = "gen-channel-config-schema"
path = "src/bin/gen_channel_config_schema.rs"
