[package]
name = "ersatztv-channel"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
ersatztv-core = { workspace = true }
ersatztv-playout = { workspace = true }
ffpipeline = { workspace = true }
futures-core = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simple-expand-tilde = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }

[[bin]]
name = "gen-channel-config-schema"
path = "src/bin/gen_channel_config_schema.rs"
