[package]
name = "ersatztv-playout-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
ersatztv-core = { workspace = true }
ersatztv-playout = { workspace = true }
ffpipeline = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
