[package]
name = "ersatztv-playout"
version = "0.1.0"
edition = "2024"

[dependencies]
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }

[[bin]]
name = "gen-playout-schema"
path = "src/bin/gen_playout_schema.rs"
