[package]
name = "ersatztv"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tower-http = { workspace = true }
