[package]
name = "ersatztv"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
ersatztv-core = { workspace = true }
filetime = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
